<resources>
    <string name="app_name">hotelmanagement</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id" />
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token" />
    <string name="lbl_hotel_stars">Hotel Stars</string>
    <string name="lbl_55_review">(55 Review)</string>
    <string name="lbl_m">M</string>
    <string name="msg_don_t_have_an_a">"Don't have an account?"</string>
    <string name="lbl_s">S</string>
    <string name="lbl_t">T</string>
    <string name="lbl_w">W</string>
    <string name="msg_mentari_pagi_ho">Mentari Pagi Hotel</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_scheduled">Scheduled</string>
    <string name="msg_this_payment_is">This payment is secured by the advance machine and government security</string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_hi_john">Hi, John.</string>
    <string name="msg_from_4232_revie">From 4232 Reviews</string>
    <string name="lbl_holder_s_name">Holder\u2019s Name</string>
    <string name="lbl_start_from">Start From</string>
    <string name="lbl_59">59</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_min">Min</string>
    <string name="lbl_f">F</string>
    <string name="lbl_1_king_bed">1 King Bed</string>
    <string name="lbl_price_range">Price Range</string>
    <string name="msg_sunset_bay_reso">Sunset Bay Resort</string>
    <string name="lbl_feb_22">Feb 22</string>
    <string name="msg_continue_with_f">Continue With Facebook</string>
    <string name="lbl_send_email">Send Email</string>
    <string name="msg_continue_with_g">Continue With Google</string>
    <string name="msg_term_conditio">Term &amp; Condition</string>
    <string name="lbl_check_in">Check In</string>
    <string name="lbl_special_request">Special Request</string>
    <string name="lbl_pay_on_check_in">Pay On Check-in</string>
    <string name="lbl_order_id">Order ID</string>
    <string name="lbl_30">30</string>
    <string name="lbl_31">31</string>
    <string name="msg_by_ticking_this">By ticking this you agree our term and condition here</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_32">32</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_payment_success">Payment Success</string>
    <string name="msg_25_june_2022">25 June 2022 | 14:00</string>
    <string name="msg_special_price_f">Special Price for honeymoon occasion in Bali Resort</string>
    <string name="msg_where_do_you_wa">Where do you want to stay?</string>
    <string name="lbl_singapore">Singapore</string>
    <string name="lbl_your_email">Your Email</string>
    <string name="msg_1_premium_del">(1) Premium Deluxe King Room</string>
    <string name="lbl_restaurant">Restaurant</string>
    <string name="lbl_check_out">Check Out</string>
    <string name="lbl_20">20</string>
    <string name="lbl_23">23</string>
    <string name="msg_search_city_or">Search city or hotel name</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="msg_your_account_wa">Your account was Login from Laptop at 5:00. Wasn\u2019t you?</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_29">29</string>
    <string name="msg_check_in_time">Check In Time - 14:00 Check Out Time - 12:00</string>
    <string name="lbl_500">$500</string>
    <string name="lbl_4_5">4.5</string>
    <string name="lbl_budget">Budget</string>
    <string name="lbl_4_9">4.9</string>
    <string name="msg_mr_anderson_jo">Mr. Anderson Jonathan</string>
    <string name="lbl_neermana_hotel">Neermana Hotel</string>
    <string name="lbl_12">12</string>
    <string name="lbl_ac">AC</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_pay_at_hotel">Pay At Hotel</string>
    <string name="lbl_11">11</string>
    <string name="lbl_16">16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_15">$15</string>
    <string name="lbl_18">18</string>
    <string name="lbl_19">19</string>
    <string name="msg_hotel_californi">Hotel California</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="msg_12345678_21_m">12345678 - 21 May 2022</string>
    <string name="lbl_choose">Choose</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_log_in2">Log In</string>
    <string name="lbl_may_2022">May 2022</string>
    <string name="lbl_00">00</string>
    <string name="lbl_mm_yy">MM/YY</string>
    <string name="lbl_popular_city">Popular City</string>
    <string name="msg_re_enter_passwo">Re-Enter Password</string>
    <string name="lbl_your_name">Your Name</string>
    <string name="lbl_pay">Pay</string>
    <string name="msg_the_european_la3">The European languages are members of the same famil their</string>
    <string name="lbl_choose_dates">Choose Dates</string>
    <string name="msg_the_european_la2">The European languages are members of the same family their</string>
    <string name="msg_your_last_searc">Your Last Searches</string>
    <string name="lbl_or">Or</string>
    <string name="msg_the_european_la">The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes The European languages are members of the same family. Their separate existence is a myth.</string>
    <string name="lbl_explore">Explore</string>
    <string name="lbl_swimming_pool">Swimming Pool</string>
    <string name="msg_saturday_14_ma">Saturday, 14 May 2022</string>
    <string name="msg_20_may_2022_2">20 May 2022 - 21 May 2022</string>
    <string name="msg_our_special_sel">Our special selected hotel for this year</string>
    <string name="lbl_152">15</string>
    <string name="msg_tropicalia_reso">Tropicalia Resort</string>
    <string name="lbl_back">Back</string>
    <string name="msg_24_hour_front_d">24 Hour Front Desk</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_ctp_bank">CTP Bank</string>
    <string name="msg_2_adult_s_ro">2 Adult(s) / Room</string>
    <string name="lbl_resort">Resort</string>
    <string name="lbl_home">Home</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="lbl_bali_indonesia">Bali, Indonesia</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="msg_budget_twin_roo">Budget Twin Room</string>
    <string name="msg_fri_22_may_202">Fri, 22 May 2022 (14:00)</string>
    <string name="lbl_resend_email">Resend Email</string>
    <string name="lbl_wifi">Wifi</string>
    <string name="lbl_max">Max</string>
    <string name="msg_here_s_some_hot">"Here's some hotel recommendation in your city"</string>
    <string name="lbl_luxury">Luxury</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="msg_welcome_to_stay">Welcome To Stay App</string>
    <string name="lbl_fill_in_details">Fill in Details</string>
    <string name="lbl_25_may_31_may">25 May - 31 May</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_neermana_bank">Neermana Bank</string>
    <string name="lbl_bank_transfer">Bank Transfer</string>
    <string name="msg_yournamehere_em">yournamehere@email.com</string>
    <string name="lbl_booking_summary">Booking Summary</string>
    <string name="msg_going_out_for_h">Going out for holiday? Here\u2019s our recommendation</string>
    <string name="lbl_parking_space">Parking Space</string>
    <string name="lbl_525">$525</string>
    <string name="msg_get_your_specia">Get your special dicount now! Only for this month</string>
    <string name="lbl_payment">Payment</string>
    <string name="msg_ratings_revie">Ratings &amp; Reviews</string>
    <string name="lbl_melati_hotel">Melati Hotel</string>
    <string name="msg_thu_21_may_202">Thu, 21 May 2022 (14:00)</string>
    <string name="msg_your_booking_wa">Your booking was succesfuly made! Enjoy your vacation</string>
    <string name="msg_good_stay_rest">Good Stay Rest Better</string>
    <string name="lbl_on_going_promo">On Going Promo</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_clarisha">Clarisha</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_1_night">1 Night</string>
    <string name="lbl_denpasar">Denpasar</string>
    <string name="lbl_villa">Villa</string>
    <string name="msg_going_to_bali">Going to Bali? This hotel recommendation might help</string>
    <string name="lbl_max_30_nights">Max. 30 Nights</string>
    <string name="lbl_my_booking">My Booking</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_good">Good</string>
    <string name="msg_see_the_best_ho">See the best hotel recommendation for your trip</string>
    <string name="msg_check_out_thu">Check-out: Thu, 19 May 2022</string>
    <string name="lbl_water_heater">Water Heater</string>
    <string name="lbl_2_guest_s">2 Guest(s)</string>
    <string name="lbl_elevator">Elevator</string>
    <string name="lbl_5_june_1998">5 June 1998</string>
    <string name="lbl_choose_room">Choose Room</string>
    <string name="lbl_new_york">New York</string>
    <string name="lbl_12000_points">12000 Points</string>
    <string name="lbl_payment_methode">Payment Methode</string>
    <string name="lbl_225">$225</string>
    <string name="msg_the_email_takes">"The email takes a couple minutes to arrive.Still didn't arrived yet?"</string>
    <string name="lbl_denpasar_city">Denpasar City</string>
    <string name="lbl_no_breakfast">No Breakfast</string>
    <string name="msg_debit_credit">Debit / Credit Card</string>
    <string name="lbl_dec_31">Dec 31</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_newsletter">Newsletter</string>
    <string name="lbl_see_all">See All</string>
    <string name="lbl_95">$95</string>
    <string name="lbl_your_request">Your Request</string>
    <string name="msg_bhumibandara_ho">Bhumibandara Hotel</string>
    <string name="msg_2_guest_s_1_r">2 Guest(s), 1 Room(s)</string>
    <string name="lbl_05_00">05:00</string>
    <string name="lbl_450">$450</string>
    <string name="lbl_web_payment">Web Payment</string>
    <string name="msg_about_acommodat">About Acommodation</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_my_bookings">My Bookings</string>
    <string name="lbl_gym">Gym</string>
    <string name="lbl_1">1</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_4">4</string>
    <string name="lbl_5">5</string>
    <string name="lbl_6">6</string>
    <string name="lbl_7">7</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_8">8</string>
    <string name="lbl_login">Login</string>
    <string name="pop_currentpass">Mật khẩu cũ</string>
    <string name="pop_newpass">Mật khẩu mới</string>
    <string name="pop_confirmpass">Nhập lại mật khẩu</string>
    <string name="epro_fullname">Họ và tên</string>
    <string name="epro_email">Email</string>
    <string name="epro_mobile">Số điện thoại</string>
    <string name="epro_status">Trạng thái</string>
    <string name="epro_role">Quyền</string>
    <string name="epro_address">Địa chỉ</string>
</resources>