<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="@dimen/_180pxh"
        android:layout_marginBottom="@dimen/_120pxh"
        android:background="@drawable/popupbg"
        android:padding="@dimen/_15pxh"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Chỉnh sửa"
            android:layout_gravity="center"
            android:textColor="#29A599"
            android:textSize="22sp"
            android:textStyle="bold" />


       <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_fullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/epro_fullname"
        android:textColorHint="@color/purple"
        android:theme="@style/EditTextThemeOverlay"
        app:boxStrokeColor="@color/purple"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtfullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHighlight="@color/textColorHighlight" />
    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlined_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/epro_email"
            android:textColorHint="@color/purple"
            android:theme="@style/EditTextThemeOverlay"
            android:background="#EBAFAFAF"
            app:boxStrokeColor="@color/purple"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="none"
                android:focusable="false"
                android:textColorHighlight="@color/textColorHighlight" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlined_Address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/epro_address"
            android:textColorHint="@color/purple"
            android:theme="@style/EditTextThemeOverlay"
            app:boxStrokeColor="@color/purple"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHighlight="@color/textColorHighlight" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlined_Mobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/epro_mobile"
            android:textColorHint="@color/purple"
            android:theme="@style/EditTextThemeOverlay"
            app:boxStrokeColor="@color/purple"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHighlight="@color/textColorHighlight" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlined_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/epro_status"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlined_Role"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/epro_role"
            android:textColorHint="@color/purple"
            android:theme="@style/EditTextThemeOverlay"
            android:background="#EBAFAFAF"
            app:boxStrokeColor="@color/purple"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="none"
                android:focusable="false"
                app:boxStrokeColor="@color/purple"
                android:textColorHighlight="@color/textColorHighlight" />
        </com.google.android.material.textfield.TextInputLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_10pxh"
            android:layout_marginEnd="@dimen/_10pxh">
            <TextView
                android:id="@+id/mUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cập nhật"
                android:layout_marginStart="@dimen/_200pxh"
                android:layout_marginEnd="@dimen/_5pxh"
                android:textColor="#E60E0E"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/mCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Thoát"
                android:layout_marginStart="@dimen/_100pxh"
                android:layout_marginEnd="@dimen/_135pxh"
                android:textColor="#E60E0E"
                android:textSize="18sp"
                android:textStyle="bold"/>


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>