<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="@dimen/_300pxh"
        android:layout_marginBottom="@dimen/_10pxh"
        android:background="@drawable/popupbg"
        android:padding="@dimen/_15pxh"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="ĐỔI MẬT KHẨU"
            android:layout_gravity="center"
            android:textColor="#29A599"
            android:textSize="22sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtcurrentPass"
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/pop_currentpass"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtnewPass"
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/pop_newpass"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtconfirmPass"
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/pop_confirmpass"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_10pxh"
            android:layout_marginEnd="@dimen/_10pxh">
            <TextView
                android:id="@+id/mUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cập nhật"
                android:layout_marginStart="@dimen/_200pxh"
                android:layout_marginEnd="@dimen/_5pxh"
                android:textColor="#E60E0E"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/mCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_100pxh"
                android:layout_marginEnd="@dimen/_135pxh"
                android:text="Thoát"
                android:textColor="#E60E0E"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
